--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ body {
 
 .img1 {
   width: 100%;
-  height: 100%;
+  height: 500px;
   object-fit: cover;
   border-radius: 10px;
   display: block;
